--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "pdf-parse": "^1.1.1",
     "ws": "^8.18.0"
   }
 }
