--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
